# hfo-genetic-server

./: .gitignore  README.md  bachelor-thesis.sublime-project  bachelor-thesis.sublime-workspace
graphs/: ploteverything
graphs/gnupscripts/: best-and-mean-fitness-in-percent-for-all-players.p  catch.p  defense-best-actions.p  dribble.p  games-played-for-best-players.p  noop.p  offense-best-actions.p  offenseActionDists.p  offenseBallActionDists.p  offenseFitness.p  offenseFitness.py
graphs/gnupscripts/old/: offenseActionDists.p  offenseFitness.p
graphs/gnupscripts/playerscripts/: intercept.p  move.p  pass11.p  pass7.p  shoot.p
graphs/info/: defenseContent.txt  defenseMaxCount.txt  offenseContent.txt  offenseMaxCount.txt
hfo-agent-py/: action.py  agentaction.py  coloredoutput.py  common.py  communication.json  genetic-agent.py  goalie-log.txt  hfolstm.py  jsonparser.py
hfo-agent-py/lstm/: hfolstm.py
hfo-agent-py/test-agent/: test-agent.py
hfo-server-hs/: hfo-server-hs.cabal
hfo-server-hs/app/: Main.hs
hfo-server-hs/src/: CrossEntropy.hs  Evaluator.hs  Evaluator.sublime-project  Evaluator.sublime-workspace  Folds.hs  Genetic.hs  HFO.hs  Test.hs
hfo-server-hs/src/Genetic/: Allele.hs  Crossover.hs  Mutation.hs  Permutation.hs  Selection.hs
hfo-server-hs/src/HFO/: Agent.hs  Parser.hs  Server.hs  StateParser.hs  ToFlags.hs  Types.hs
hfo-server-hs/src/HFO/Agent/: Actions.hs  Conf.hs  Data.hs  untitled.sublime-workspace
hfo-server-hs/src/HFO/Server/: Conf.hs
hfo-server-hs/test/: Spec.hs
