name:                hfo-server-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hfo-server-hs#readme
license:             MIT
license-file:        LICENSE
author:              Alexander Isenko
maintainer:          alex.isenko@protonmail.com
copyright:           2016 Alexander Isenko
category:            Machine Learning
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HFO
                     , HFO.Server
                     , HFO.Server.Conf
                     , HFO.Agent
                     , HFO.Agent.Data
                     , HFO.Agent.Conf
                     , HFO.ToFlags
                     , HFO.StateParser
                     , Genetic
                     , Genetic.Crossover
                     , Genetic.Mutation
                     , Genetic.Allele
                     , Genetic.Selection
  build-depends:       base         >= 4.7 && < 5
                     , process      >= 1.2.0.0 && < 1.5.0.0
                     , MonadRandom  >= 0.4.0.0 && < 0.5.0.0
                     , random       >= 1.0.0.0 && < 2.0.0.0
                     , directory    >= 1.2.2.0 && < 2.0.0.0
                     , random-shuffle ==0.0.4
                     , text         >= 1.0.0.0
  default-language:    Haskell2010

executable hfo-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , hfo-server-hs
                     , process        >= 1.2.0.0 && < 1.5.0.0
                     , MonadRandom    >= 0.4.0.0 && < 0.5.0.0
                     , random         >= 1.0.0.0 && < 2.0.0.0
                     , timeit         >= 1.0.0.0 && < 2.0.0.0
                     , ansi-terminal  >= 0.6.0.0
  default-language:    Haskell2010

test-suite hfo-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hfo-server-hs
                     , hspec            == 2.2.*
                     , directory        >= 1.2.0.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cirquit/hfo-server-hs
